--- a/app/views/home/view.html.erb
+++ b/app/views/home/view.html.erb
@@ -27,8 +27,14 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
                     Menu <i class="fa fa-bars"></i>
                 </button>
+                <!--
                 <a class="navbar-brand page-scroll" href="#page-top">
-                    <i class="fa fa-play-circle"></i> <span class="light">Chico State</span> FSAE Electric
+                -->
+                <a class="page-scroll custom-navbar-img"  href="#page-top" >
+                  <img src="/assets/formula_logo_temp.png" height="42" width="42">
+                </a>
+                <a class="navbar-brand page-scroll" href="https://www.csuchico.edu" target="_blank">
+                    <i class="fa fa-play-circle"></i> <span class="light">California State University, Chico</span>
                 </a>
             </div>
 
