--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,9 +17,18 @@
 
 @font-face {
   font-family: 'Glyphicons Halflings';
-src: url('../assets/glyphicons-halflings-regular.eot');
-src: url('../assets/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'), 
+  src: url('../assets/glyphicons-halflings-regular.eot');
+  src: url('../assets/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'), 
        url('../assets/glyphicons-halflings-regular.woff') format('woff'), 
        url('../assets/glyphicons-halflings-regular.ttf') format('truetype'), 
        url('../assets/glyphicons-halflings-regular.svg#glyphicons_halflingsregular') format('svg');
+}
+@font-face {
+  font-family: 'Formula-Font';
+    src: url('../assets/formula-font.ttf') format('truetype');  /* IE6–8 */
+}
+
+@font-face {
+  font-family: 'Chico-Font';
+    src: url('../assets/chico-font.ttf') format('truetype');  /* IE6–8 */
 }
